--- a/index.html
+++ b/index.html
@@ -683,20 +683,20 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round" style="border-width: 0px;">
-                                                        <a href="#"><img src="upload/hp2-service-2.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
+                                                        <a href="rips.html"><img src="upload/hp2-service-2.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 17px;" id="gdlr-core-title-item-id-52723">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 20px;font-weight: 600;letter-spacing: 0px;text-transform: none;color: #1e1e1e;"><a href="#" target="_self">Term loan for Business</a><span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 20px;font-weight: 600;letter-spacing: 0px;text-transform: none;color: #1e1e1e;"><a href="rips.html" target="_self">Rajasthan Investment Promotion Scheme (RIPS)</a><span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-text-box-item-content" style="font-size: 16px;">
-                                                        <p>A term loan is a fixed amount loan provided by banks or financial institutions, repaid over a set period with either a fixed or floating interest rate.</p>
+                                                        <p>RIPS 2024 is a flagship scheme by the Government of Rajasthan offering financial incentives, tax benefits, and infrastructure support to boost industrial and service sector investments in the state.</p>
                                                     </div>
                                                 </div>
                                             </div>
