--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="margin-top: -6px;"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="#" id="gdlr-core-button-id-7877"><span class="gdlr-core-content">Learn More</span></a></div>
+                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="margin-top: -6px;"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="rips.html" id="gdlr-core-button-id-7877"><span class="gdlr-core-content">Learn More</span></a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -712,14 +712,14 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round" style="border-width: 0px;">
-                                                        <a href="#"><img src="upload/hp2-service-3.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
+                                                        <a href="vishwakarma-yuva-laghu-udyog-protsahan-yojana.html"><img src="upload/hp2-service-3.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 17px;" id="gdlr-core-title-item-id-6222">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 20px;font-weight: 600;letter-spacing: 0px;text-transform: none;color: #1e1e1e;"><a href="#" target="_self">Government Grants & Subsidies</a><span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 20px;font-weight: 600;letter-spacing: 0px;text-transform: none;color: #1e1e1e;"><a href="vishwakarma-yuva-laghu-udyog-protsahan-yojana.html" target="_self">Vishwakarma Yuva Laghu Udyog Protsahan Yojana</a><span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
@@ -730,7 +730,7 @@
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="margin-top: -6px;"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="#" id="gdlr-core-button-id-85586"><span class="gdlr-core-content">Learn More</span></a></div>
+                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="margin-top: -6px;"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="vishwakarma-yuva-laghu-udyog-protsahan-yojana.html" id="gdlr-core-button-id-85586"><span class="gdlr-core-content">Learn More</span></a></div>
                                             </div>
                                         </div>
                                     </div>
