--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-text-box-item-content" style="font-size: 16px;">
-                                                        <p>We delivers expert guidance to help businesses efficiently secure government grants and subsidies, optimizing financial support for sustainable growth.</p>
+                                                        <p>This scheme aims to boost youth entrepreneurship in Rajasthan by providing financial support for setting up or expanding small businesses.</p>
                                                     </div>
                                                 </div>
                                             </div>
