--- a/index.html
+++ b/index.html
@@ -741,25 +741,25 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round" style="border-width: 0px;">
-                                                        <a href="#"><img src="upload/hp2-service-4.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
+                                                        <a href="brupy.html"><img src="upload/hp2-service-4.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 17px;" id="gdlr-core-title-item-id-80731">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 20px;font-weight: 600;letter-spacing: 0px;text-transform: none;color: #1e1e1e;"><a href="#" target="_self">Instant Personal Loan</a><span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 20px;font-weight: 600;letter-spacing: 0px;text-transform: none;color: #1e1e1e;"><a href="brupy.html" target="_self">Empowering Rural Entrepreneurs Through BRUPY</a><span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-text-box-item-content">
-                                                        <p>We facilitates quick and hassle-free access to instant personal loans with competitive rates and flexible repayment options..</p>
+                                                        <p>Expert consultancy to help you leverage the *Backward and Regional Upliftment Programme for Youth (BRUPY)</p>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="margin-top: -6px;"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="#" id="gdlr-core-button-id-48150"><span class="gdlr-core-content">Learn More</span></a></div>
+                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="margin-top: -6px;"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="brupy.html" id="gdlr-core-button-id-48150"><span class="gdlr-core-content">Learn More</span></a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -770,25 +770,25 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round" style="border-width: 0px;">
-                                                        <a href="#"><img src="upload/hp2-service-5.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
+                                                        <a href="pmegp.html"><img src="upload/hp2-service-5.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 17px;" id="gdlr-core-title-item-id-94327">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 20px;font-weight: 600;letter-spacing: 0px;text-transform: none;color: #1e1e1e;"><a href="#" target="_self">Unsecured Business Loan</a><span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 20px;font-weight: 600;letter-spacing: 0px;text-transform: none;color: #1e1e1e;"><a href="pmegp.html" target="_self">Prime Minister’s Employment Generation Programme (PMEGP)</a><span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-text-box-item-content">
-                                                        <p>We specializes in facilitating unsecured business loans, providing flexible, collateral-free financing solutions to empower your business growth.</p>
+                                                        <p>The Prime Minister’s Employment Generation Programme (PMEGP) is a key initiative by the Government of India designed to foster self-employment and entrepreneurial ventures among youth and aspiring business owners.</p>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="margin-top: -6px;"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="#" id="gdlr-core-button-id-54926"><span class="gdlr-core-content">Learn More</span></a></div>
+                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="margin-top: -6px;"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="pmegp.html" id="gdlr-core-button-id-54926"><span class="gdlr-core-content">Learn More</span></a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -799,14 +799,14 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round" style="border-width: 0px;">
-                                                        <a href="#"><img src="upload/hp2-service-6.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
+                                                        <a href="wearhouse.html"><img src="upload/hp2-service-6.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 17px;" id="gdlr-core-title-item-id-30889">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 20px;font-weight: 600;letter-spacing: 0px;text-transform: none;color: #1e1e1e;"><a href="#" target="_self">Solar Finance</a><span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3></div>
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 20px;font-weight: 600;letter-spacing: 0px;text-transform: none;color: #1e1e1e;"><a href="wearhouse.html" target="_self">Comprehensive Warehouse Solutions</a><span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
@@ -817,7 +817,7 @@
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="margin-top: -6px;"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="#" id="gdlr-core-button-id-71144"><span class="gdlr-core-content">Learn More</span></a></div>
+                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="margin-top: -6px;"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="wearhouse.html" id="gdlr-core-button-id-71144"><span class="gdlr-core-content">Learn More</span></a></div>
                                             </div>
                                         </div>
                                     </div>
