Change help value

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                                 </li>
                                 <li class="menu-item menu-item-has-children"><a href="services.html">Our Services</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item"><a href="capital-markets.html">Capital Markets</a></li>
-                                        <li class="menu-item"><a href="insurance.html">Insurance</a></li>
-                                        <li class="menu-item"><a href="blockchain.html">Blockchain</a></li>
-                                        <li class="menu-item"><a href="technology-advisory.html">Technology Advisory</a></li>
-                                        <li class="menu-item"><a href="finance-risk.html">Finance & Risk</a></li>
-                                        <li class="menu-item"><a href="portfolio-management.html">Portfolio Management</a></li>
+                                        <li class="menu-item" data-size="60"><a href="capital-markets.html">Loan & Finance</a></li>
+                                        <li class="menu-item" data-size="60"><a href="rips.html">Rajasthan Investment Promotion Scheme (RIPS)</a></li>
+                                        <li class="menu-item" data-size="60"><a href="vishwakarma-yuva-laghu-udyog-protsahan-yojana.html">Vishwakarma Yuva Laghu Udyog Protsahan Yojana</a></li>
+                                        <li class="menu-item" data-size="60"><a href="brupy.html">Empowering Rural Entrepreneurs Through BRUPY</a></li>
+                                        <li class="menu-item" data-size="60"><a href="pmegp.html">Prime Minister’s Employment Generation Programme (PMEGP)</a></li>
+                                        <li class="menu-item" data-size="60"><a href="wearhouse.html">Comprehensive Warehouse Solutions</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children"><a href="portfolio-3-columns.html">Our Cases</a>
@@ -301,12 +301,12 @@
                                         </li>
                                         <li class="menu-item menu-item-has-children financity-normal-menu"><a href="services.html" class="sf-with-ul-pre">Our Services</a>
                                             <ul class="sub-menu">
-                                                <li class="menu-item" data-size="60"><a href="capital-markets.html">Capital Markets</a></li>
-                                                <li class="menu-item" data-size="60"><a href="insurance.html">Insurance</a></li>
-                                                <li class="menu-item" data-size="60"><a href="blockchain.html">Blockchain</a></li>
-                                                <li class="menu-item" data-size="60"><a href="technology-advisory.html">Technology Advisory</a></li>
-                                                <li class="menu-item" data-size="60"><a href="finance-risk.html">Finance & Risk</a></li>
-                                                <li class="menu-item" data-size="60"><a href="portfolio-management.html">Portfolio Management</a></li>
+                                                <li class="menu-item" data-size="60"><a href="capital-markets.html">Loan & Finance</a></li>
+                                                <li class="menu-item" data-size="60"><a href="rips.html">Rajasthan Investment Promotion Scheme (RIPS)</a></li>
+                                                <li class="menu-item" data-size="60"><a href="vishwakarma-yuva-laghu-udyog-protsahan-yojana.html">Vishwakarma Yuva Laghu Udyog Protsahan Yojana</a></li>
+                                                <li class="menu-item" data-size="60"><a href="brupy.html">Empowering Rural Entrepreneurs Through BRUPY</a></li>
+                                                <li class="menu-item" data-size="60"><a href="pmegp.html">Prime Minister’s Employment Generation Programme (PMEGP)</a></li>
+                                                <li class="menu-item" data-size="60"><a href="wearhouse.html">Comprehensive Warehouse Solutions</a></li>
                                             </ul>
                                         </li>
                                         <li class="menu-item menu-item-has-children financity-mega-menu"><a href="portfolio-3-columns.html" class="sf-with-ul-pre">Our Cases</a>
