--- a/loan-finance.html
+++ b/loan-finance.html
@@ -538,13 +538,13 @@
                                     </div>
                                     <div id="nav_menu-3" class="widget widget_nav_menu financity-widget">
                                         <div class="menu-our-services-container">
-                                            <ul id="menu-our-services" class="menu">
-                                                <li class="menu-item current_page_item menu-item-5453"><a href="index.html">Capital Markets</a></li>
-                                                <li class="menu-item"><a href="#">Insurance</a></li>
-                                                <li class="menu-item"><a href="#">Blockchain</a></li>
-                                                <li class="menu-item"><a href="#">Technology Advisory</a></li>
-                                                <li class="menu-item"><a href="#">Finance & Risk</a></li>
-                                                <li class="menu-item"><a href="#">Portfolio Management</a></li>
+                                            <ul class="sub-menu">
+                                                <li class="menu-item" data-size="60"><a href="capital-markets.html">Loan & Finance</a></li>
+                                                <li class="menu-item" data-size="60"><a href="rips.html">Rajasthan Investment Promotion Scheme (RIPS)</a></li>
+                                                <li class="menu-item" data-size="60"><a href="vishwakarma-yuva-laghu-udyog-protsahan-yojana.html">Vishwakarma Yuva Laghu Udyog Protsahan Yojana</a></li>
+                                                <li class="menu-item" data-size="60"><a href="brupy.html">Empowering Rural Entrepreneurs Through BRUPY</a></li>
+                                                <li class="menu-item" data-size="60"><a href="pmegp.html">Prime Minister’s Employment Generation Programme (PMEGP)</a></li>
+                                                <li class="menu-item" data-size="60"><a href="wearhouse.html">Comprehensive Warehouse Solutions</a></li>
                                             </ul>
                                         </div>
                                     </div>
