Subsidy Mantra to 360 Subsidy

--- a/pmegp.html
+++ b/pmegp.html
@@ -220,7 +220,7 @@
                                                           
                                                           
                                                           <p><b style="font-size: 22px;">How 360 Subsidy Supports You</b></p>
-                                                          <p>At Subsidy Mantra, we streamline your PMEGP application and maximize your chances of success by providing:</p>
+                                                          <p>At 360 Subsidy, we streamline your PMEGP application and maximize your chances of success by providing:</p>
                                                           <ul>
                                                             <li>Guidance in selecting and planning viable business ideas</li>
                                                             <li>Preparation of detailed project reports (DPR)</li>
