CEO of Subcidy to Founder of Subsidy

--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
                                                             <div class="gdlr-core-blockquote-item-content gdlr-core-skin-content">
                                                                 <p>Our goal is to be at the heart of the financial services industry as businesses expand across.</p>
                                                             </div>
-                                                            <div class="gdlr-core-blockquote-item-author gdlr-core-skin-caption">Rajkamal Pradhan<span class="gdlr-core-blockquote-item-author-position">CEO Of 360Subcidy</span></div>
+                                                            <div class="gdlr-core-blockquote-item-author gdlr-core-skin-caption"> C.A. Rajkamal Pradhan<span class="gdlr-core-blockquote-item-author-position">Founder of 360 Subsidy</span></div>
                                                         </div>
                                                     </div>
                                                 </div>
