--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>360Subcidy</title>
+    <title>360Subsidy</title>
 
 
     <link rel="stylesheet" href="plugins/revslider/public/assets/css/settings.css" type="text/css" media="all">
