--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js " data-gdlr-animation="fadeInLeft" data-gdlr-animation-duration="600ms" data-gdlr-animation-offset="0.8">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
-                                                    <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round" style="border-radius: 4px;-moz-border-radius: 4px;-webkit-border-radius: 4px;border-width: 0px;"><img src="upload/hp3-service-4.jpg" alt="" width="800" height="530"></div>
+                                                    <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round" style="border-radius: 4px;-moz-border-radius: 4px;-webkit-border-radius: 4px;border-width: 0px;"><img src="upload/aboutimg.jpg.jpeg" alt="" width="800" height="530"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -904,7 +904,7 @@
                                 <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " data-sync-height="quote-height">
                                         <div class="gdlr-core-pbf-background-wrap">
-                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/home-1-quote.jpg);background-size: cover;background-position: center;" data-parallax-speed="0"></div>
+                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/about2img.jpg.jpeg);background-size: cover;background-position: center;" data-parallax-speed="0"></div>
                                         </div>
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content"></div>
                                     </div>
