--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-<a href="https://wa.me/919876543210?text=Hi%20there%2C%20I%20am%20interested%20in%20your%20services"
+<a href="https://wa.me/919772959105?text=Hi%20there%2C%20I%20am%20interested%20in%20your%20services"
    class="whatsapp-float"
    target="_blank"
    title="Chat with us on WhatsApp">
@@ -120,6 +120,8 @@
                                                 <li class="menu-item" data-size="60"><a href="wearhouse.html">Comprehensive Warehouse Solutions</a></li>
                                             </ul>
                                         </li>
+                                        <li class="menu-item menu-item-has-children financity-normal-menu"><a href="about-us.html" class="sf-with-ul-pre">About us</a>
+                                        </li>
                                     </ul>
                             </div>
                             
@@ -173,7 +175,7 @@
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-left gdlr-core-no-caption gdlr-core-item-pdlr" style="padding-bottom: 30px;">
-                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image" style="margin-top: 10px;margin-right: 30px;"><img src="upload/hp3-icon-1.png" alt="" width="50" height="50"></div>
+                                                    <div class="gdlr-core-column-service-media gdlr-core-media-image" style="margin-top: 10px;margin-right: 30px;"><img src="upload/subsidy.png" alt="" width="50" height="50"></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap" style="margin-bottom: 12px;">
                                                             <h3 class="gdlr-core-column-service-title" style="font-size: 18px;font-weight: 600;letter-spacing: 0px;text-transform: none;">Government Subsidies</h3></div>
@@ -461,7 +463,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-text-box-item-content">
-                                                        <p></p>
+                                                        <p>Efficient warehousing forms the cornerstone of a resilient supply chain. At 360 Subsidy, we deliver tailored, secure, and scalable warehouse services to businesses across diverse industries.</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -487,7 +489,7 @@
                                                 <h3 class="gdlr-core-call-to-action-item-title" style="font-size: 31px;font-weight: 400;letter-spacing: 0px;">Wanna Talk To Us?</h3>
                                                 <div class="gdlr-core-call-to-action-item-caption gdlr-core-title-font gdlr-core-skin-caption">Please feel free to contact us. We’re super happy to talk to you. Feel free to ask anything.</div>
                                             </div>
-                                            <div class="gdlr-core-call-to-action-item-button"><a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border" href="https://wa.me/919876543210?text=Hi%20there%2C%20I%20am%20interested%20in%20your%20services" style="border-radius: 30px;-moz-border-radius: 30px;-webkit-border-radius: 30px;"><span class="gdlr-core-content">Contact Us</span></a></div>
+                                            <div class="gdlr-core-call-to-action-item-button"><a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border" href="https://wa.me/917821928482?text=Hi%20there%21%20Thank%20you%20for%20reaching%20out%20to%20360%20Subsidy.%0AWe%27re%20here%20to%20guide%20you%20through%20the%20various%20government%20subsidy%20programs%20available%20for%20your%20business.%0APlease%20let%20us%20know%20how%20we%20can%20help%20you%20today%3F" style="border-radius: 30px;-moz-border-radius: 30px;-webkit-border-radius: 30px;"><span class="gdlr-core-content">Contact Us</span></a></div>
                                         </div>
                                     </div>
                                 </div>
